--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FA3B3B"
-    tools:context=".MainActivity">
+    tools:context=".presenter.MainActivity">
 
     <ImageView
         android:id="@+id/backgroud"
