--- a/app/src/main/res/layout/fragment_shopping_products.xml
+++ b/app/src/main/res/layout/fragment_shopping_products.xml
@@ -28,9 +28,20 @@
                 android:layout_marginStart="20sp"
                 android:layout_marginTop="32dp"
                 android:text="Dulceria"
-                android:textColor="#fff"
+                android:textColor="#D9D9D9"
                 android:textSize="30sp"
                 android:textStyle="bold" />
+
+            <!--Linea de separación -->
+            <View
+                android:id="@+id/separator_1"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#FDFDFD"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
@@ -52,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Total Productos:"
-                    android:textColor="#fff"
+                    android:textColor="#D9D9D9"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -61,7 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="S/.0.00"
-                    android:textColor="#fff"
+                    android:textColor="#D9D9D9"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -82,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Total Entradas:"
-                    android:textColor="#fff"
+                    android:textColor="#D9D9D9"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -91,71 +102,83 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="S/.0.00"
-                    android:textColor="#fff"
+                    android:textColor="#D9D9D9"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal">
+                android:id="@+id/layout_linear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+                <!--android:visibility="gone"-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="4dp"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Total:"
-                    android:textColor="#fff"
-                    android:textSize="30sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Total:"
+                        android:textColor="#D9D9D9"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/txtTotal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="S/.0.00"
-                    android:textColor="#fff"
-                    android:textSize="30sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/txtTotal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="S/.0.00"
+                        android:layout_marginStart="160dp"
+                        android:textColor="#D9D9D9"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="4dp"
+                    android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/btn_cancel"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15sp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/btn_cancelar2"
-                    android:text="Cancelar"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    <Button
+                        android:id="@+id/btn_cancel"
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="15sp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/btn_cancelar2"
+                        android:text="Cancelar"
+                        android:layout_marginStart="20dp"
+                        android:textColor="#fff"
+                        android:layout_marginBottom="20dp"
+                        android:textSize="14sp" />
 
-                <Button
-                    android:id="@+id/btn_accept"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/btn_comprar2"
-                    android:text="Continuar"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    <Button
+                        android:id="@+id/btn_accept"
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/btn_comprar2"
+                        android:text="Continuar"
+                        android:textColor="#fff"
+                        android:layout_marginBottom="20dp"
+                        android:textSize="14sp" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
