--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -9,19 +9,17 @@
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
     android:elevation="3dp">
-
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/picCine"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="115dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/nameProduct"
         android:layout_width="wrap_content"
