--- a/app/src/main/res/drawable/ic_vote.xml
+++ b/app/src/main/res/drawable/ic_vote.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="@color/icons"
+<vector android:height="24dp" android:tint="#FFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M18,13h-0.68l-2,2h1.91L19,17L5,17l1.78,-2h2.05l-2,-2L6,13l-3,3v4c0,1.1 0.89,2 1.99,2L19,22c1.1,0 2,-0.89 2,-2v-4l-3,-3zM17,7.95l-4.95,4.95 -3.54,-3.54 4.95,-4.95L17,7.95zM12.76,2.29L6.39,8.66c-0.39,0.39 -0.39,1.02 0,1.41l4.95,4.95c0.39,0.39 1.02,0.39 1.41,0l6.36,-6.36c0.39,-0.39 0.39,-1.02 0,-1.41L14.16,2.3c-0.38,-0.4 -1.01,-0.4 -1.4,-0.01z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M1,21h4L5,9L1,9v12zM23,10c0,-1.1 -0.9,-2 -2,-2h-6.31l0.95,-4.57 0.03,-0.32c0,-0.41 -0.17,-0.79 -0.44,-1.06L14.17,1 7.59,7.59C7.22,7.95 7,8.45 7,9v10c0,1.1 0.9,2 2,2h9c0.83,0 1.54,-0.5 1.84,-1.22l3.02,-7.05c0.09,-0.23 0.14,-0.47 0.14,-0.73v-2z"/>
 </vector>
